hphp/test/zend/good/ext-pcre/bug20528.php
<?php
	$data = '(#11/19/2002#)';
	var_dump(preg_split('/\b/', $data));
?>