hphp/test/zend/bad/Zend/tests/bug52237.php
<?php
$data = 'test';
preg_match('//', '', $data->info);
var_dump($data);
?>